<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:background="@color/white">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_topbg"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:gravity="start"
        android:background="@color/blue">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/nav_topbg">
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="fill_parent"
            android:id="@+id/incident_left"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_alignParentLeft="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/incident_propertytitle"
                    android:textSize="16sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/leftBg"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/house"/>
                <TextView
                    android:id="@+id/incident_propertyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftColor"
                    android:paddingLeft="7.5dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textSize="12sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/leftBg"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/person"/>
                <TextView
                    android:id="@+id/incident_propertyOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftColor"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textSize="12sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/incident_propertyLogo"
                    android:layout_width="320dp"
                    android:layout_height="210dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/default_logo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@color/gray3"
                android:layout_marginTop="-30dp"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/incident_propertyAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:text=""
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/incident_owner"
                    android:textSize="16sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/leftBg"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/at"/>
                <TextView
                    android:id="@+id/incident_contactOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftColor"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textSize="12sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/incident_office"
                    android:textSize="16sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/leftBg"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/at"/>
                <TextView
                    android:id="@+id/incident_contactOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/leftColor"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textSize="12sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
        </LinearLayout>
        <View
            android:id="@+id/incident_middle"
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/gray2"
            android:layout_toRightOf="@id/incident_left"></View>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/incident_right"
            android:orientation="vertical"
            android:layout_toRightOf="@id/incident_middle">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="@string/incident_title"
                    android:textSize="16sp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></View>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                 <!-- list view -->
                <ListView
                    android:id="@+id/incident_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"></ListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>